--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ keywords = ["bevy", "extension", "traits"]
 categories = ["game-development", "graphics"]
 readme = "README.md"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/ickshonpe/bevy_mod_extra_extensions"
 
 [dependencies.bevy]
 version = "0.9"
